--- a/css/styles.css
+++ b/css/styles.css
@@ -1,42 +1,134 @@
 body {
-    font-family: 'Roboto', sans-serif, 'Times New Roman', Times, serif;
-    color: #212121;
+    font-family: 'Roboto', sans-serif;
+    background-color: var( --body-color);
+    color: var(--text-color);
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
+}
+:root {
+    --body-color: #fff;
+    --text-color: #757575;
+    --a-color: #2196F3;
+    --title-color: #212121;
 }
 /* button */
-button:hover {
-  background-color: #2196F3;
-  color: white;
-  cursor: pointer;
+button {
+    cursor: pointer;
+    width: 125px;
+    height: 38px;
+    left: 593px;
+    top: 174px;
+}
+button:hover, button:focus {
+    background-color: var(--a-color);
+    color: var(--body-color);
 }
 /* links */
 a {
     text-decoration: none;
-    color: #000;
-    width: 281px;
-    height: 16px;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.02em;
+    color: var(--title-color);
 }
 a:focus, a:hover {
-    color: #2196F3;
-}
-.navigation {
-    color: black;
+    color: var(--a-color);
 }
 .contacts a {
-    color: #757575;
+    color:  var(--text-color);
+    font-style: normal;
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 24px;
+    letter-spacing: 0.03em;
 }
-.contacts a:hover, 
-a:focus  {
-    color: #2196F3;
+.contacts a:hover, .contacts a:focus{
+    color: var(--a-color);
 }
 .webstudio {
     font-family: 'Raleway';
+    font-style: normal;
+    font-weight: 700;
     font-size: 26px;
+    line-height: 31px;
+    letter-spacing: 0.03em;
 }
 span {
-    color: #2196F3;
-}
-/* text */
-p {
-    color: #757575;
+    color: var(--a-color);
 }
 
+/* text */
+h1 {
+    font-style: normal;
+    font-weight: 900;
+    font-size: 44px;
+    line-height: 60px;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
+    color: var(--title-color);
+}
+h2 {
+    color: var(--title-color);
+}
+p {
+    font-family: 'Roboto';
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: var(--title-color);
+}
+.team {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 19px;   
+    letter-spacing: 0.03em;
+    color: var(--title-color);
+}
+.paragraph {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 19px;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+}
+.project-paragraph {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 30px;
+    letter-spacing: 0.03em;
+    color: var(--text-color);
+}
+.filter, .benefits-title, .projects-title {
+    display: none;
+}
+ul {
+    list-style: none;
+}
+.project-name {
+    font-weight: 700;
+    font-size: 18px;
+    line-height: 36px;
+    letter-spacing: 0.06em;
+    color: var(--title-color);
+}
+.benefits {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 16px;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--title-color);
+}
+.work, .our-team {
+    font-weight: 700;
+    font-size: 36px;
+    line-height: 42px;
+    letter-spacing: 0.03em;
+}
