--- a/css/styles.css
+++ b/css/styles.css
@@ -4,7 +4,7 @@ body {
     color: var(--text-color);
     font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
+    line-height: 1.7;
     letter-spacing: 0.03em;
 }
 :root {
@@ -12,60 +12,74 @@ body {
     --text-color: #757575;
     --a-color: #2196F3;
     --title-color: #212121;
+    --bg-color: #F5F4FA;
+    --caption-color: #2F303A;
+    --heading-color: #FFFFFF;
 }
 /* button */
 button {
     cursor: pointer;
-    width: 125px;
-    height: 38px;
-    left: 593px;
-    top: 174px;
 }
 button:hover, button:focus {
     background-color: var(--a-color);
     color: var(--body-color);
 }
+.btn:active {
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+}
+
 /* links */
+.caption {
+    background-color: var(--caption-color);
+}
+.section-portfolio {
+    background-color: var(--heading-color);
+}
 a {
     text-decoration: none;
     font-weight: 500;
     font-size: 14px;
-    line-height: 16px;
+    line-height: 1.1;
     letter-spacing: 0.02em;
     color: var(--title-color);
 }
 a:focus, a:hover {
     color: var(--a-color);
 }
+
 .contacts a {
     color:  var(--text-color);
     font-style: normal;
-    font-weight: 400;
     font-size: 14px;
-    line-height: 24px;
-    letter-spacing: 0.03em;
+    line-height: 1.7;
 }
 .contacts a:hover, .contacts a:focus{
     color: var(--a-color);
 }
 .webstudio {
-    font-family: 'Raleway';
-    font-style: normal;
+    font-family: 'Raleway', sans-serif;
     font-weight: 700;
     font-size: 26px;
-    line-height: 31px;
-    letter-spacing: 0.03em;
+    line-height: 1.1;
 }
 span {
     color: var(--a-color);
 }
+header {
+    background-color: var(--heading-color);
+}
+.site-nav .link.current {
+color: var(--a-color);
+}
 
 /* text */
+.heading {
+    color: var(--heading-color);
+}
 h1 {
-    font-style: normal;
     font-weight: 900;
     font-size: 44px;
-    line-height: 60px;
+    line-height: 1.3;
     letter-spacing: 0.06em;
     text-transform: uppercase;
     color: var(--title-color);
@@ -75,34 +89,24 @@ h2 {
 }
 p {
     font-family: 'Roboto';
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.03em;
+    line-height: 1.8;
     color: var(--title-color);
 }
 .team {
     font-weight: 500;
     font-size: 16px;
     line-height: 19px;   
-    letter-spacing: 0.03em;
     color: var(--title-color);
 }
 .paragraph {
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
-    line-height: 19px;
-    letter-spacing: 0.03em;
+    line-height: 1.1;
     color: var(--text-color);
 }
 .project-paragraph {
-    font-style: normal;
-    font-weight: 400;
     font-size: 16px;
-    line-height: 30px;
-    letter-spacing: 0.03em;
+    line-height: 1.8;
     color: var(--text-color);
 }
 .filter, .benefits-title, .projects-title {
@@ -114,21 +118,30 @@ ul {
 .project-name {
     font-weight: 700;
     font-size: 18px;
-    line-height: 36px;
+    line-height: 2;
     letter-spacing: 0.06em;
     color: var(--title-color);
 }
 .benefits {
     font-weight: 700;
     font-size: 14px;
-    line-height: 16px;
-    letter-spacing: 0.03em;
+    line-height: 1.1;
     text-transform: uppercase;
     color: var(--title-color);
 }
 .work, .our-team {
     font-weight: 700;
     font-size: 36px;
-    line-height: 42px;
-    letter-spacing: 0.03em;
+    line-height: 1.1;
+}
+.command {
+    background-color: var(--bg-color);
+}
+/* footer */
+footer {
+    background-color: var( --caption-color);
+}
+
+.studio {
+    color: var(--heading-color);
 }
