--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,10 @@ body {
     --heading-color: #FFFFFF;
 }
 /* button */
+.buttons {
+    width: 73px;
+    height: 38px;
+}
 button {
     cursor: pointer;
 }
@@ -49,7 +53,6 @@ a:focus, a:hover {
 .contacts a {
     color:  var(--text-color);
     font-style: normal;
-    line-height: 1.7;
 }
 .contacts a:hover, .contacts a:focus{
     color: var(--a-color);
@@ -98,12 +101,10 @@ p {
     color: var(--title-color);
 }
 .paragraph {
-    font-size: 16px;
     line-height: 1.1;
     color: var(--text-color);
 }
 .project-paragraph {
-    font-size: 16px;
     line-height: 1.8;
     color: var(--text-color);
 }
@@ -140,4 +141,17 @@ footer {
 
 .studio {
     color: var(--heading-color);
+}
+
+.visually-hidden { 
+    position: absolute; 
+    width: 1px;  
+    height: 1px; 
+    margin: -1px;  
+    border: 0;  
+    padding: 0;
+    white-space: nowrap; 
+    clip-path: inset(100%);
+    clip: rect(0 0 0 0);  
+    overflow: hidden;
 }
