--- a/css/styles.css
+++ b/css/styles.css
@@ -113,7 +113,7 @@ p {
 ul {
     list-style: none;
 }
-.project-name {
+.projects-name {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
