--- a/css/styles.css
+++ b/css/styles.css
@@ -17,6 +17,17 @@ body {
     --heading-color: #FFFFFF;
 }
 /* button */
+.btn {
+    font-weight: 500;
+    font-size: 16px;
+    line-height: 1.6;
+    text-align: center;
+    letter-spacing: 0.03em;
+    width: 125px;
+    height: 38px;
+    font-family: 'Roboto';
+    font-style: normal;
+}
 button {
     cursor: pointer;
 }
@@ -24,10 +35,29 @@ button:hover, button:focus {
     background-color: var(--a-color);
     color: var(--body-color);
 }
+.buttons {
+    width: 216px;
+    height: 50px;
+    left: 692px;
+    top: 430px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.8;
+    text-align: center;
+    letter-spacing: 0.06em;
+    font-family: 'Roboto';
+    font-style: normal;
+}
 .btn:active {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
 }
-
+.buttons {
+        width: 216px;
+        height: 50px;
+        left: 692px;
+        top: 430px;
+        border-radius: 4px;
+}
 /* links */
 .caption {
     background-color: var(--caption-color);
