--- a/css/styles.css
+++ b/css/styles.css
@@ -139,7 +139,7 @@ p {
 ul {
     list-style: none;
 }
-.projects-name {
+.projects-names {
     font-weight: 700;
     font-size: 18px;
     line-height: 2;
