--- a/css/styles.css
+++ b/css/styles.css
@@ -148,7 +148,7 @@ ul {
     font-size: 36px;
     line-height: 1.1;
 }
-.command {
+.commands {
     background-color: var(--bg-color);
 }
 /* footer */
