--- a/css/styles.css
+++ b/css/styles.css
@@ -15,6 +15,7 @@ body {
     --bg-color: #F5F4FA;
     --caption-color: #2F303A;
     --heading-color: #FFFFFF;
+    --buttons-hover: #188CE8;
 }
 /* button */
 .btn {
@@ -42,8 +43,11 @@ button:hover, button:focus {
     text-align: center;
     letter-spacing: 0.06em;
     font-family: inherit;
-    background-color: var(--bg-color);
-    color: var(--title-color);
+    background-color: var(--a-color);
+    color: var(--heading-color);
+}
+.buttons:hover, .buttons:focus {
+    background-color: var(--buttons-hover);
 }
 .btn:active {
     filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
